# kop

./: .gitignore  README.md  default.nix  flake.nix  kafkactl.yaml  pyproject.toml  pyproject.toml.bak  skaffold.kafka.yaml  skaffold.reactive.yaml
examples/kafka/helm/kafka/: Chart.yaml
examples/kafka/helm/kafka/templates/: NOTES.txt  kafka.yaml
examples/kafka/helm/kafka_proxy/: Chart.yaml
examples/kafka/helm/kafka_proxy/templates/: NOTES.txt  deployment.yaml  service.yaml
examples/kafka/helm/redpanda_console/: Chart.yaml
examples/kafka/helm/redpanda_console/templates/: NOTES.txt  deployment.yaml  service.yaml
examples/reactive/: Dockerfile
examples/reactive/helm/: Chart.yaml
examples/reactive/helm/templates/: NOTES.txt  deployment.yaml
examples/reactive/src/: consumer.py  producer.py
