[project]
name = "kop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Alex Kwiatkowski", email = "rupurt@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.11.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
